your message goes here

--- a/index.html
+++ b/index.html
@@ -5,9 +5,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width ,initial-scale=1.0">
     <!-- css styles -->
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Raleway:400,500,700" rel="stylesheet">
+    <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css" href="css/reset.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
+
+    <script type="text/javascript" src="js/respond.js"></script>
 </head>
 <body>
 <!-- body content-->    
-<!-- javascript -->    
+<!-- javascript -->   
+<script type="text/javascript" src="js/bootstrap.min.js"></script> 
+<scritp type="text/javascript" src="js/main.js"></scritp>
 </body>
 </html>
